# stock-stalker

./: .gitignore  Cargo.toml
src/: cli.rs  config.rs  lib.rs  main.rs  stocks.rs
