[package]
name = "stock-stalker"
version = "0.1.0"
edition = "2021"
authors = ["Sean Ray <seanray410@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"
serde = "1.0.136"
alpha_vantage = "0.7.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
reqwest = "0.11.9"
anyhow = "1.0.54"
chrono = "0.4.19"
serde_derive = "1.0.117"
